new naming scheme

--- a/config/fixes/IFS.yaml
+++ b/config/fixes/IFS.yaml
@@ -249,7 +249,7 @@ models:
                 method: default
 
         # this should be exactly the same but we have tprate without decumulation already in the fdb       
-        control-1950-devcon:
+        control-1990-nemo-devcon:
             hourly-1deg:
                 method: merge
                 vars:
@@ -261,8 +261,31 @@ models:
                     tprate:
                         source: tprate
 
-        # this should be exactly the same but we have tprate without decumulation already in the fdb 
-        historical-1990-devcon:
+        control-1950-nemo-devcon:
+            hourly-1deg:
+                method: merge
+                vars:
+                    tprate:
+                        source: tprate
+            hourly-native:
+                method: merge
+                vars:
+                    tprate:
+                        source: tprate
+
+        historical-1990-fesom-devcon:
+            hourly-1deg:
+                method: merge
+                vars:
+                    tprate:
+                        source: tprate
+            hourly-native:
+                method: merge
+                vars:
+                    tprate:
+                        source: tprate
+
+        historical-1990-nemo-devcon:
             hourly-1deg:
                 method: merge
                 vars:
