The grids, weights, and areas paths are moved from the 'regrid.yaml' file to 'catalog.yaml'.

--- a/config/machines/ci/catalog.yaml
+++ b/config/machines/ci/catalog.yaml
@@ -1,3 +1,8 @@
+paths:
+  grids: ./AQUA_tests/grids
+  weights: ./AQUA_tests/weights
+  areas: ./AQUA_tests/weights
+
 sources:
   FESOM:
     description: FESOM ocean model
