--- a/config/machines/levante/catalog.yaml
+++ b/config/machines/levante/catalog.yaml
@@ -1,3 +1,8 @@
+paths:
+  grids: /work/bb1153/b382075/aqua/grids
+  weights: /work/bb1153/b382075/aqua/weights
+  areas: /work/bb1153/b382075/aqua/areas
+  
 sources:
   IFS:
     description: IFS atmosphere model
