--- a/config/machines/mafalda/catalog.yaml
+++ b/config/machines/mafalda/catalog.yaml
@@ -1,3 +1,8 @@
+paths:
+  grids: /work/users/jost/aqua/grids
+  weights: /work/users/jost/aqua/weights
+  areas: /work/users/jost/aqua/areas
+
 sources:
   IFS:
     description: IFS atmospheric model
