The 'source_grid_name' key is added to the metadata of all sources on Levante.

--- a/config/machines/levante/catalog/AVISO/ssh-L4.yaml
+++ b/config/machines/levante/catalog/AVISO/ssh-L4.yaml
@@ -6,6 +6,8 @@ sources:
   daily:
     description: AVISO ssh vDT2021    
     driver: zarr
+    metadata:
+      source_grid_name: aviso
     args:
       consolidated: False
       compat: override
