--- a/config/machines/levante/catalog/FESOM/tco3999-ng5.yaml
+++ b/config/machines/levante/catalog/FESOM/tco3999-ng5.yaml
@@ -19,6 +19,8 @@ sources:
   #   driver: zarr
   interpolated_global2d:
     driver: zarr
+    metadata:
+      source_grid_name: fesom-interpolated-2d
     args:
       consolidated: False
       compat: override
@@ -27,6 +29,8 @@ sources:
       - reference::/work/ab0995/a270088/NextGems_public/FESOM_interpolated/tco3999-ng5/MLD2/MLD2.fesom.json
   interpolated_global_TS:
     driver: zarr
+    metadata:
+      source_grid_name: fesom-interpolated-3d
     args:
       consolidated: False
       compat: override
@@ -36,6 +40,8 @@ sources:
       - reference::/work/ab0995/a270088/NextGems_public/FESOM_interpolated/tco3999-ng5/temp/temp.fesom.json
   interpolated_global_UV:
     driver: zarr
+    metadata:
+      source_grid_name: fesom-interpolated-3d
     args:
       consolidated: False
       compat: override
@@ -60,6 +66,8 @@ sources:
   #     urlpath: 
   #     - reference::/work/ab0995/a270088/NextGems_public/FESOM_interpolated/tco3999-ng5/m_ice_sp/m_ice.fesom.json
   original_2d:
+    metadata:
+      source_grid_name: ng5-nodes-2d
     args:
       chunks:
         time: 1
@@ -447,6 +455,8 @@ sources:
     description: original 2d output
     driver: netcdf
   original_3d:
+    metadata:
+      source_grid_name: ng5-nodes-3d
     args:
       chunks:
         nz: 1
@@ -516,6 +526,8 @@ sources:
     description: original 3d output depending on nod2
     driver: netcdf
   original_3d_elem:
+    metadata:
+      source_grid_name: ng5-elems-3d
     args:
       chunks:
         nz: 1
