--- a/config/machines/levante/catalog/CERES/syn-toa41.yaml
+++ b/config/machines/levante/catalog/CERES/syn-toa41.yaml
@@ -6,6 +6,8 @@ sources:
   daily:
     description: CERES SYN TOA Ed4.1 from 2001 to 2021
     driver: netcdf
+    metadata:
+      source_grid_name: lon-lat
     args:
       urlpath: 
         - '/work/bb1153/m300265/NextGEMS/observations/ceres-ebaf/daily/CERES_SYN1deg-Day_Terra-Aqua-MODIS_Ed4.1_Subset_20010101-20070909.nc'
