--- a/config/machines/levante/catalog/EN4/en4.yaml
+++ b/config/machines/levante/catalog/EN4/en4.yaml
@@ -7,6 +7,8 @@ sources:
   monthly:
     description: EN4 data v4.2.2_g10 version from 1950 to 2022
     driver: netcdf
+    metadata:
+      source_grid_name: en4
     args:
       urlpath: '/work/bb1153/b382119/EN4/*-1950_2022.nc'
       chunks: 
