--- a/config/machines/levante/catalog/ERA5/era5.yaml
+++ b/config/machines/levante/catalog/ERA5/era5.yaml
@@ -7,6 +7,8 @@ sources:
   monthly:
     description: ERA5 monthly data from 1940 to 2022
     driver: netcdf
+    metadata:
+      source_grid_name: era5-r025
     args:
       urlpath: '/work/bb1153/b382076/ERA5/mon/ERA5_*_mon_full**.nc'
       chunks: 
