--- a/config/machines/levante/catalog/ICON/ngc3028.yaml
+++ b/config/machines/levante/catalog/ICON/ngc3028.yaml
@@ -3,6 +3,7 @@ sources:
     args:
       metadata:
         grid: HealPIX
+        source_grid_name: icon-healpix
       consolidated: true
       urlpath: 
         /work/bm1235/k203123/NextGEMS_Cycle3.git/experiments/ngc3028/outdata/ngc3028_PT30M_{{
@@ -29,6 +30,7 @@ sources:
     args:
       metadata:
         grid: HealPIX
+        source_grid_name: icon-healpix
       consolidated: true
       urlpath: 
         /work/bm1235/k203123/NextGEMS_Cycle3.git/experiments/ngc3028/outdata/ngc3028_PT3H_{{
@@ -55,6 +57,7 @@ sources:
     args:
       metadata:
         grid: HealPIX
+        source_grid_name: icon-healpix
       consolidated: true
       urlpath: 
         /work/bm1235/k203123/NextGEMS_Cycle3.git/experiments/ngc3028/outdata/ngc3028_P1D_{{
@@ -86,3 +89,5 @@ sources:
       chunks: {}
       xarray_kwargs:
         decode_times: true
+    metadata:
+      source_grid_name: lon-lat
