--- a/config/machines/levante/catalog/IFS/historical-1990-devcon.yaml
+++ b/config/machines/levante/catalog/IFS/historical-1990-devcon.yaml
@@ -6,3 +6,5 @@ sources:
       urlpath: /work/bb1153/b382076/LRA-dev/IFS/historical-1990-devcon/r100/monthly/*historical-1990-devcon_r100_monthly_????.nc
       chunks: {}
       xarray_kwargs:
+    metadata:
+      source_grid_name: lon-lat
