--- a/config/machines/levante/catalog/IFS/tco2559-ng5.yaml
+++ b/config/machines/levante/catalog/IFS/tco2559-ng5.yaml
@@ -9,18 +9,24 @@ sources:
     args:
       consolidated: False
       urlpath: reference::/work/bm1344/AWI/nextGEMS_Cycle2_IFS_concat/tco2559-ng5/varfiles_all/json.dir/atm2d.json
+    metadata:
+      source_grid_name: tco2559
   ICMU_atm2d:
     driver: zarr
     description: original 2d output (lnsp)
     args:
       consolidated: False
       urlpath: reference::/work/bm1344/AWI/nextGEMS_Cycle2_IFS_concat/tco2559-ng5/varfiles_all/json.dir/atm2d.json
+    metadata:
+      source_grid_name: tco2559
   ICMU_atm3d:
     driver: zarr
     description: original 3d output
     args:
       consolidated: False
       urlpath: reference::/work/bm1344/AWI/nextGEMS_Cycle2_IFS_concat/tco2559-ng5/varfiles_all/json.dir/atm3d.json
+    metadata:
+      source_grid_name: tco2559
   interpolated_global:
     driver: zarr
     description: NN interpolation to 5400x2700 grid (lon=[-180,180], lat=[-90, 90])
@@ -34,6 +40,8 @@ sources:
       - reference::/work/ab0995/a270088/NextGems_public/appetizer/IFS4.5/lcc/netcdf/tco2559-ng5_pc.json
       - reference::/work/ab0995/a270088/NextGems_public/appetizer/IFS4.5/10u/netcdf/tco2559-ng5_pc.json
       - reference::/work/ab0995/a270088/NextGems_public/appetizer/IFS4.5/10v/netcdf/tco2559-ng5_pc.json
+    metadata:
+      source_grid_name: ifs-interpolated
   lra-r100-monthly:
     description: LRA data monthly at r100
     driver: 'netcdf'
@@ -42,6 +50,8 @@ sources:
       chunks: {}
       xarray_kwargs:
         decode_times: true
+    metadata:
+      source_grid_name: lon-lat
   # interpolated_sp_ci:
   #   driver: zarr
   #   args:
