--- a/config/machines/levante/catalog/IFS/tco3999-ng5.yaml
+++ b/config/machines/levante/catalog/IFS/tco3999-ng5.yaml
@@ -11,6 +11,8 @@ sources:
       consolidated: False
       #urlpath: reference::/work/bm1235/a270046/cycle2-sync/tco3999-ng5/ICMGGc2/json.dir/atm2d.json
       urlpath: reference::/work/bm1344/AWI/nextGEMS_Cycle2_IFS_concat/tco3999-ng5/varfiles_all/json.dir/atm2d.json
+    metadata:
+      source_grid_name: tco3999
   ICMU_atm2d:
     driver: zarr
     description: original 2d output (lnsp)
@@ -18,6 +20,8 @@ sources:
       consolidated: False
       #urlpath: reference::/work/bm1235/a270046/cycle2-sync/tco3999-ng5/ICMUAc2/json.dir/atm2d.json
       urlpath: reference::/work/bm1344/AWI/nextGEMS_Cycle2_IFS_concat/tco3999-ng5/varfiles_all/json.dir/atm2d.json
+    metadata:
+      source_grid_name: tco3999
   ICMU_atm3d:
     driver: zarr
     description: original 3d output
@@ -25,6 +29,8 @@ sources:
       consolidated: False
       #urlpath: reference::/work/bm1235/a270046/cycle2-sync/tco3999-ng5/ICMUAc2/json.dir/atm3d.json
       urlpath: reference::/work/bm1344/AWI/nextGEMS_Cycle2_IFS_concat/tco3999-ng5/varfiles_all/json.dir/atm3d.json
+    metadata:
+      source_grid_name: tco3999
   interpolated_global:
     driver: zarr
     description: NN interpolation to 5400x2700 grid (lon=[-180,180], lat=[-90, 90])
@@ -44,6 +50,8 @@ sources:
       - reference::/work/ab0995/a270088/NextGems_public/appetizer/IFS2.5/lcc/netcdf/tco3999-ng5_pc.json
       - reference::/work/ab0995/a270088/NextGems_public/appetizer/IFS2.5/10u/netcdf/tco3999-ng5_pc.json
       - reference::/work/ab0995/a270088/NextGems_public/appetizer/IFS2.5/10v/netcdf/tco3999-ng5_pc.json
+    metadata:
+      source_grid_name: ifs-interpolated
   lra-r100-monthly:
     driver: netcdf
     description: LRA data monthly at r100
@@ -52,6 +60,8 @@ sources:
       chunks: {}
       xarray_kwargs:
         decode_times: true
+    metadata:
+      source_grid_name: lon-lat
   # interpolated_np:
   #   driver: zarr
   #   args:
