--- a/config/machines/levante/catalog/MSWEP/past.yaml
+++ b/config/machines/levante/catalog/MSWEP/past.yaml
@@ -6,6 +6,8 @@ sources:
   monthly:
     description: monthly MSWEP_V280 data
     driver: zarr
+    metadata:
+      source_grid_name: lon-lat
     args:
       consolidated: False
       urlpath: 
@@ -15,6 +17,8 @@ sources:
   daily:
     description: daily MSWEP_V280 data
     driver: zarr
+    metadata:
+      source_grid_name: lon-lat
     args:
       consolidated: False
       urlpath: 
@@ -64,6 +68,8 @@ sources:
   3hourly:
     description: 3 hourly MSWEP_V280 data
     driver: zarr
+    metadata:
+      source_grid_name: lon-lat
     args:
       consolidated: False
       urlpath: 
