The 'source_grid_name' key is added to the metadata of all sources on Lumi.

--- a/config/machines/lumi/catalog/ERA5/era5.yaml
+++ b/config/machines/lumi/catalog/ERA5/era5.yaml
@@ -6,6 +6,8 @@ sources:
   monthly:
     description: ERA5 monthly data from 1940 to 2022
     driver: netcdf
+    metadata:
+      source_grid_name: era5-r025
     args:
       urlpath: '{{DATA_PATH}}/ERA5/mon/ERA5_*_mon_full**.nc'
       chunks: 
