--- a/config/machines/lumi/catalog/CERES/ebaf-sfc41.yaml
+++ b/config/machines/lumi/catalog/CERES/ebaf-sfc41.yaml
@@ -6,6 +6,8 @@ sources:
   monthly:
     description: CERES EBAF SFC Ed4.1 from 2000 to 2022
     driver: netcdf
+    metadata:
+      source_grid_name: lon-lat
     args:
       urlpath: '{{DATA_PATH}}/CERES/EBAF_v4.1/CERES_EBAF-Surface_Ed4.1_Subset_200003-202203.nc'
       chunks: {}
