--- a/config/machines/lumi/catalog/CERES/ebaf-toa42.yaml
+++ b/config/machines/lumi/catalog/CERES/ebaf-toa42.yaml
@@ -6,6 +6,8 @@ sources:
   monthly:
     description: CERES EBAF TOA Ed4.2 from 2000 to 2023
     driver: netcdf
+    metadata:
+      source_grid_name: lon-lat
     args:
       urlpath: '{{DATA_PATH}}/CERES/EBAF_v4.2/CERES_EBAF-TOA_Edition4.2_MONTHLY_200003-202301.nc'
       chunks: {}
