--- a/config/machines/lumi/catalog/CERES/syn-toa41.yaml
+++ b/config/machines/lumi/catalog/CERES/syn-toa41.yaml
@@ -6,6 +6,8 @@ sources:
   daily:
     description: CERES SYN TOA Ed4.1 from 2001 to 2021
     driver: netcdf
+    metadata:
+      source_grid_name: lon-lat
     args:
       urlpath: 
         - '{{DATA_PATH}}/CERES/SYNOP_v4.1/CERES_SYN1deg-Day_Terra-Aqua-MODIS_Ed4.1_Subset_20010101-20070909.nc'
