--- a/config/machines/lumi/catalog/ERA5/fdb.yaml
+++ b/config/machines/lumi/catalog/ERA5/fdb.yaml
@@ -14,4 +14,6 @@ sources:
             timestyle: date
         description: 'Test FDB data'
         driver: gsv
-        metadata: {fdb_path: /scratch/project_465000454/igonzalez/fdb-test/config.yaml}
+        metadata: 
+          fdb_path: /scratch/project_465000454/igonzalez/fdb-test/config.yaml
+          source_grid_name: lon-lat
