--- a/config/machines/lumi/catalog/IFS/control-1950-nemo-dev.yaml
+++ b/config/machines/lumi/catalog/IFS/control-1950-nemo-dev.yaml
@@ -26,6 +26,7 @@ sources:
       fdb_path: /pfs/lustrep3/scratch/project_465000454/pool/data/EXPERIMENTS/fdb-config-CONTROL_1950_DEVCON.yaml
       eccodes_path: /projappl/project_465000454/jvonhar/aqua/eccodes/eccodes-2.30.0/definitions
       variables: ['tprate', '2t', '10u', '10v', '100u', '100v', 'sr', 'blh', '2d', 'skt', 'chnk']
+      source_grid_name: tco1279
   hourly-1deg:
     args:
       request:
@@ -54,6 +55,7 @@ sources:
       fdb_path: /pfs/lustrep3/scratch/project_465000454/pool/data/EXPERIMENTS/fdb-config-CONTROL_1950_DEVCON.yaml
       eccodes_path: /projappl/project_465000454/jvonhar/aqua/eccodes/eccodes-2.30.0/definitions
       variables: ['tprate', 'sf', '2t', '10u', 'blh', 'sshf', 'slhf', 'ssrd', 'ssr', 'strd', 'str', 'ttr', 'e', 'tsr', 'ewss', 'nsss', 'chnk', 'sro', 'ssro']
+      source_grid_name: lon-lat
   6hourly-1deg:
     args:
       request:
@@ -81,6 +83,7 @@ sources:
       fdb_path: /pfs/lustrep3/scratch/project_465000454/pool/data/EXPERIMENTS/fdb-config-CONTROL_1950_DEVCON.yaml
       eccodes_path: /projappl/project_465000454/jvonhar/aqua/eccodes/eccodes-2.30.0/definitions
       variables: ['z']
+      source_grid_name: lon-lat
   monthly-1deg-2d:
     args:
       request:
@@ -107,6 +110,7 @@ sources:
       fdb_path: /pfs/lustrep3/scratch/project_465000454/pool/data/EXPERIMENTS/fdb-config-CONTROL_1950_DEVCON.yaml
       eccodes_path: /projappl/project_465000454/jvonhar/aqua/eccodes/eccodes-2.30.0/definitions
       variables: ['tcc', 'sd', 'tciw', 'tclw', 'msl', 'tcwv', 'lcc', 'mcc', 'hcc']
+      source_grid_name: lon-lat
   monthly-1deg-3d:
     args:
       request:
@@ -135,9 +139,12 @@ sources:
       fdb_path: /pfs/lustrep3/scratch/project_465000454/pool/data/EXPERIMENTS/fdb-config-CONTROL_1950_DEVCON.yaml
       eccodes_path: /projappl/project_465000454/jvonhar/aqua/eccodes/eccodes-2.30.0/definitions
       variables: ['u', 'v', 't', 'r', 'q']
+      source_grid_name: lon-lat
   lra-r100-monthly:
     driver: netcdf
     description: LRA data monthly at r100
+    metadata:
+      source_grid_name: lon-lat
     args:
       urlpath: 
         /pfs/lustrep3/projappl/project_465000454/padavini/LRA-dev/IFS/control-1950-devcon/r100/monthly/*control-1950-devcon_r100_monthly_????.nc
