--- a/config/machines/lumi/catalog/IFS/control-1990-nemo-dev.yaml
+++ b/config/machines/lumi/catalog/IFS/control-1990-nemo-dev.yaml
@@ -26,6 +26,7 @@ sources:
       fdb_path: /pfs/lustrep3/scratch/project_465000454/iwagner/a0c7/config.yaml
       eccodes_path: /scratch/project_465000454/maxness/Bundle_Healpix_Test/feature/healpix-interpolation-2/source/eccodes/definitions
       variables: ['tprate', 'sp', '2t', '10u', '10v', '100u', '100v', 'sr', 'blh', '2d', 'skt', 'chnk', 'fsr']
+      source_grid_name: tco1279
   hourly-1deg:
     args:
       request:
@@ -54,6 +55,7 @@ sources:
       fdb_path: /pfs/lustrep3/scratch/project_465000454/iwagner/a0c7/config.yaml
       eccodes_path: /scratch/project_465000454/maxness/Bundle_Healpix_Test/feature/healpix-interpolation-2/source/eccodes/definitions
       variables: ['tprate', 'sf', '2t', '10u', 'blh', 'sshf', 'slhf', 'ssrd', 'ssr', 'strd', 'str', 'ttr', 'e', 'tsr', 'ewss', 'nsss', 'chnk', 'sro', 'ssro']
+      source_grid_name: lon-lat
   6hourly-1deg:
     args:
       request:
@@ -81,6 +83,7 @@ sources:
       fdb_path: /pfs/lustrep3/scratch/project_465000454/iwagner/a0c7/config.yaml
       eccodes_path: /scratch/project_465000454/maxness/Bundle_Healpix_Test/feature/healpix-interpolation-2/source/eccodes/definitions
       variables: ['z']
+      source_grid_name: lon-lat
   monthly-1deg-2d:
     args:
       request:
@@ -107,6 +110,7 @@ sources:
       fdb_path: /pfs/lustrep3/scratch/project_465000454/iwagner/a0c7/config.yaml
       eccodes_path: /scratch/project_465000454/maxness/Bundle_Healpix_Test/feature/healpix-interpolation-2/source/eccodes/definitions
       variables: ['tcc', 'sd', 'tciw', 'tclw', 'msl', 'tcwv', 'lcc', 'mcc', 'hcc']
+      source_grid_name: lon-lat
   monthly-1deg-3d:
     args:
       request:
@@ -135,3 +139,4 @@ sources:
       fdb_path: /pfs/lustrep3/scratch/project_465000454/iwagner/a0c7/config.yaml
       eccodes_path: /scratch/project_465000454/maxness/Bundle_Healpix_Test/feature/healpix-interpolation-2/source/eccodes/definitions
       variables: ['u', 'v', 't', 'r', 'q']
+      source_grid_name: lon-lat
