--- a/config/machines/lumi/catalog/IFS/historical-1990-fesom-dev.yaml
+++ b/config/machines/lumi/catalog/IFS/historical-1990-fesom-dev.yaml
@@ -27,6 +27,7 @@ sources:
       fdb_path: /pfs/lustrep3/scratch/project_465000454/sbeyer/raps_sbeyer/etc/fdb/config.yaml
       eccodes_path: /projappl/project_465000454/jvonhar/aqua/eccodes/eccodes-2.31.2/definitions
       variables: ['tprate', '2t', '10u', '10v', '100u', '100v', 'blh', '2d', 'skt', 'sp', 'fsr']
+      source_grid_name: tco1279
   hourly-1deg:
     args:
       request:
@@ -55,6 +56,7 @@ sources:
       fdb_path: /pfs/lustrep3/scratch/project_465000454/sbeyer/raps_sbeyer/etc/fdb/config.yaml
       eccodes_path: /projappl/project_465000454/jvonhar/aqua/eccodes/eccodes-2.31.2/definitions
       variables: ['tprate', 'sf', '2t', '10u', '10v', 'blh', 'sshf', 'slhf', 'ssrd', 'ssr', 'strd', 'str', 'ttr', 'e', 'tsr', 'ewss', 'nsss', 'sro']
+      source_grid_name: lon-lat
   6hourly-1deg:
     args:
       request:
@@ -82,6 +84,7 @@ sources:
       fdb_path: /pfs/lustrep3/scratch/project_465000454/sbeyer/raps_sbeyer/etc/fdb/config.yaml
       eccodes_path: /projappl/project_465000454/jvonhar/aqua/eccodes/eccodes-2.31.2/definitions
       variables: ['z']
+      source_grid_name: lon-lat
   monthly-1deg-2d:
     args:
       request:
@@ -109,6 +112,7 @@ sources:
       fdb_path: /pfs/lustrep3/scratch/project_465000454/sbeyer/raps_sbeyer/etc/fdb/config.yaml
       eccodes_path: /projappl/project_465000454/jvonhar/aqua/eccodes/eccodes-2.31.2/definitions
       variables: ['tprate', '2t', 'tcc', 'sd', 'tciw', 'tclw', 'msl', 'tcwv', 'lcc', 'mcc', 'hcc']
+      source_grid_name: lon-lat
   monthly-1deg-3d:
     args:
       request:
@@ -137,3 +141,4 @@ sources:
       fdb_path: /pfs/lustrep3/scratch/project_465000454/sbeyer/raps_sbeyer/etc/fdb/config.yaml
       eccodes_path: /projappl/project_465000454/jvonhar/aqua/eccodes/eccodes-2.31.2/definitions
       variables: ['u', 'v', 't', 'r', 'q']
+      source_grid_name: lon-lat
