--- a/config/machines/lumi/catalog/IFS/tco79-eORCA1.yaml
+++ b/config/machines/lumi/catalog/IFS/tco79-eORCA1.yaml
@@ -5,12 +5,16 @@ plugins:
 sources:
   atm2d:
     driver: zarr
+    metadata:
+      source_grid_name: tco79
     args:
       consolidated: false
       urlpath: 
         reference::/projappl/project_465000454/nurissom/gribber-json/IFS/tco79-eORCA1/atm2d.json
   atm3d:
     driver: zarr
+    metadata:
+      source_grid_name: tco79
     args:
       consolidated: false
       urlpath: 
