--- a/config/machines/lumi/catalog/NEMO/control-1990-nemo-dev.yaml
+++ b/config/machines/lumi/catalog/NEMO/control-1990-nemo-dev.yaml
@@ -24,6 +24,7 @@ sources:
       fdb_path: /pfs/lustrep3/scratch/project_465000454/iwagner/a0c7/config.yaml
       eccodes_path: /scratch/project_465000454/maxness/Bundle_Healpix_Test/feature/healpix-interpolation-2/source/eccodes/definitions
       variables: ['sst']
+      source_grid_name: lon-lat
   hourly-native-3d:
     args:
       request:
@@ -49,3 +50,4 @@ sources:
       fdb_path: /pfs/lustrep3/scratch/project_465000454/iwagner/a0c7/config.yaml
       eccodes_path: /scratch/project_465000454/maxness/Bundle_Healpix_Test/feature/healpix-interpolation-2/source/eccodes/definitions
       variables: ['avg_thetao']
+      source_grid_name: lon-lat
