--- a/config/machines/ci/catalog/ICON/test-r2b0.yaml
+++ b/config/machines/ci/catalog/ICON/test-r2b0.yaml
@@ -3,6 +3,8 @@ plugins:
   - module: intake_xarray
 sources:
   short:
+    metadata:
+      source_grid_name: test-r2b0
     args:
       chunks:
         time: 1
