The 'source_grid_name' key is added to the metadata of all sources on mafalda.

--- a/config/machines/mafalda/catalog/ERA5/fdb.yaml
+++ b/config/machines/mafalda/catalog/ERA5/fdb.yaml
@@ -14,4 +14,6 @@ sources:
             timestyle: date
         description: 'Test FDB data'
         driver: gsv
-        metadata: {fdb_path: /data/users/jost/fdb/fdb-test/config.yaml}
+        metadata: 
+          fdb_path: /data/users/jost/fdb/fdb-test/config.yaml
+          source_grid_name: lon-lat
