--- a/config/machines/levante/catalog/IFS/tco2559-ng5.yaml
+++ b/config/machines/levante/catalog/IFS/tco2559-ng5.yaml
@@ -1,31 +1,34 @@
 plugins:
   source:
-    - module: intake_xarray
-    - module: gribscan
+  - module: intake_xarray
+  - module: gribscan
 sources:
   ICMGG_atm2d:
     driver: zarr
     description: original 2d output
     args:
-      consolidated: False
-      urlpath: reference::/work/bm1344/AWI/nextGEMS_Cycle2_IFS_concat/tco2559-ng5/varfiles_all/json.dir/atm2d.json
+      consolidated: false
+      urlpath: 
+        reference::/work/bm1344/AWI/nextGEMS_Cycle2_IFS_concat/tco2559-ng5/varfiles_all/json.dir/atm2d.json
   ICMU_atm2d:
     driver: zarr
     description: original 2d output (lnsp)
     args:
-      consolidated: False
-      urlpath: reference::/work/bm1344/AWI/nextGEMS_Cycle2_IFS_concat/tco2559-ng5/varfiles_all/json.dir/atm2d.json
+      consolidated: false
+      urlpath: 
+        reference::/work/bm1344/AWI/nextGEMS_Cycle2_IFS_concat/tco2559-ng5/varfiles_all/json.dir/atm2d.json
   ICMU_atm3d:
     driver: zarr
     description: original 3d output
     args:
-      consolidated: False
-      urlpath: reference::/work/bm1344/AWI/nextGEMS_Cycle2_IFS_concat/tco2559-ng5/varfiles_all/json.dir/atm3d.json
+      consolidated: false
+      urlpath: 
+        reference::/work/bm1344/AWI/nextGEMS_Cycle2_IFS_concat/tco2559-ng5/varfiles_all/json.dir/atm3d.json
   interpolated_global:
     driver: zarr
     description: NN interpolation to 5400x2700 grid (lon=[-180,180], lat=[-90, 90])
     args:
-      consolidated: False
+      consolidated: false
       compat: override
       combine: nested
       urlpath:
@@ -34,15 +37,8 @@ sources:
       - reference::/work/ab0995/a270088/NextGems_public/appetizer/IFS4.5/lcc/netcdf/tco2559-ng5_pc.json
       - reference::/work/ab0995/a270088/NextGems_public/appetizer/IFS4.5/10u/netcdf/tco2559-ng5_pc.json
       - reference::/work/ab0995/a270088/NextGems_public/appetizer/IFS4.5/10v/netcdf/tco2559-ng5_pc.json
-  lra-r100-monthly:
-    description: LRA data monthly at r100
-    driver: 'netcdf'
-    args:
-      urlpath: /work/bb1153/b382076/LRA-cycle2/IFS/tco2559-ng5/r100/monthly/*tco2559-ng5_r100_monthly_????.nc
-      chunks: {}
-      xarray_kwargs:
-        decode_times: true
-  # interpolated_sp_ci:
+
+   # interpolated_sp_ci:
   #   driver: zarr
   #   args:
   #     consolidated: False
@@ -50,7 +46,6 @@ sources:
   #     combine: nested
   #     urlpath:
   #     - reference::/work/ab0995/a270088/NextGems_public/appetizer/IFS4.5/ci/netcdf/tco2559-ng5_sp.json
-
   # interpolated_np:
   #   driver: zarr
   #   args:
@@ -84,6 +79,12 @@ sources:
   #     combine: nested
   #     urlpath:
   #     - reference::/work/ab0995/a270088/NextGems_public/appetizer/IFS4.5/ci/netcdf/tco2559-ng5_sp.json
-
-
-
+  lra-r100-monthly:
+    driver: netcdf
+    description: LRA data monthly at r100
+    args:
+      urlpath: 
+        /work/bb1153/b382076/LRA-cycle2/IFS/tco2559-ng5/r100/monthly/*tco2559-ng5_r100_monthly_????.nc
+      chunks: {}
+      xarray_kwargs:
+        decode_times: true
