--- a/config/machines/lumi/catalog/ERA5/era5.yaml
+++ b/config/machines/lumi/catalog/ERA5/era5.yaml
@@ -12,3 +12,21 @@ sources:
         time: 12
       xarray_kwargs:
         decode_times: True
+  daily:
+    description: ERA5 daily data from 1940 to 2022
+    driver: netcdf
+    args:
+      urlpath: '{{DATA_PATH}}/ERA5/day/ERA5_*_day_full*.nc'
+      chunks: 
+        time: 30
+      xarray_kwargs:
+        decode_times: True
+  hourly:
+    description: ERA5 hourly data from 1940 to 2022
+    driver: netcdf
+    args:
+      urlpath: '{{DATA_PATH}}/ERA5/1hr/ERA5_*_1hr_full*.nc'
+      chunks: 
+        time: 24
+      xarray_kwargs:
+        decode_times: True
