--- a/config/machines/lumi/catalog/NEMO/control-1990-nemo-dev.yaml
+++ b/config/machines/lumi/catalog/NEMO/control-1990-nemo-dev.yaml
@@ -22,7 +22,7 @@ sources:
     driver: gsv
     metadata: 
       fdb_path: /pfs/lustrep3/scratch/project_465000454/iwagner/a0c7/config.yaml
-      eccodes_path: /scratch/project_465000454/maxness/Bundle_Healpix_Test/feature/healpix-interpolation-2/source/eccodes/definitions
+      eccodes_path: /projappl/project_465000454/jvonhar/aqua/eccodes/eccodes-2.32.0/definitions
       variables: ['sst']
   hourly-native-3d:
     args:
@@ -47,5 +47,5 @@ sources:
     driver: gsv
     metadata: 
       fdb_path: /pfs/lustrep3/scratch/project_465000454/iwagner/a0c7/config.yaml
-      eccodes_path: /scratch/project_465000454/maxness/Bundle_Healpix_Test/feature/healpix-interpolation-2/source/eccodes/definitions
+      eccodes_path: /projappl/project_465000454/jvonhar/aqua/eccodes/eccodes-2.32.0/definitions
       variables: ['avg_thetao']
