--- a/diagnostics/tropical_cyclones/cli/config_tcs_cli.yaml
+++ b/diagnostics/tropical_cyclones/cli/config_tcs_cli.yaml
@@ -15,7 +15,7 @@ paths:
 
 # log level
 setup:
-  loglevel: 'WARNING'
+  loglevel: 'INFO'
 
 # grid on which operate
 grids:
@@ -27,12 +27,12 @@ varlist: ['msl', '10u', '10v', 'tprate']
 
 # temporal definition (YYYY-MM-DD)
 time: 
-  startdate: '2023-02-02'
+  startdate: '2020-01-20'
   enddate: '2025-01-01'
   frequency: '6h'
 
 stream:
-  streamstep: 10 #n of days for streaming
+  streamstep: "10D" # n of days for streaming (check reader args options)
 
 # detect nodes options
 detect:
