source grid in metadata

--- a/config/machines/levante/catalog/ERA5/era5.yaml
+++ b/config/machines/levante/catalog/ERA5/era5.yaml
@@ -18,6 +18,8 @@ sources:
   daily:
     description: ERA5 daily data from 1940 to 2022
     driver: netcdf
+    metadata:
+      source_grid_name: era5-r025
     args:
       urlpath: '/work/bb1153/b382076/ERA5/day/ERA5_*_day_full*.nc'
       chunks: 
@@ -27,6 +29,8 @@ sources:
   hourly:
     description: ERA5 hourly data from 1940 to 2022
     driver: netcdf
+    metadata:
+      source_grid_name: era5-r025
     args:
       urlpath: '/work/bb1153/b382076/ERA5/1hr/ERA5_*_1hr_full*.nc'
       chunks: 
