--- a/config/machines/lumi/catalog/ERA5/era5.yaml
+++ b/config/machines/lumi/catalog/ERA5/era5.yaml
@@ -17,6 +17,8 @@ sources:
   daily:
     description: ERA5 daily data from 1940 to 2022
     driver: netcdf
+    metadata:
+      source_grid_name: era5-r025
     args:
       urlpath: '{{DATA_PATH}}/ERA5/day/ERA5_*_day_full*.nc'
       chunks: 
@@ -26,6 +28,8 @@ sources:
   hourly:
     description: ERA5 hourly data from 1940 to 2022
     driver: netcdf
+    metadata:
+      source_grid_name: era5-r025
     args:
       urlpath: '{{DATA_PATH}}/ERA5/1hr/ERA5_*_1hr_full*.nc'
       chunks: 
