--- a/config/machines/ci/catalog/IFS/test-tco79.yaml
+++ b/config/machines/ci/catalog/IFS/test-tco79.yaml
@@ -4,7 +4,7 @@ plugins:
 sources:
   short:
     metadata:
-      source_grid_name: test-tco79
+      source_grid_name: tco79
     args:
       chunks:
         time: 1
@@ -44,3 +44,11 @@ sources:
     description: teleconnections catalogue
     driver: netcdf
 
+  lra-r100-monthly:
+    driver: netcdf
+    description: LRA data monthly at r100
+    args:
+      urlpath: lra_test/IFS/test-tco79/r100/monthly/*test-tco79_r100_monthly_????.nc
+      chunks: {}
+      xarray_kwargs:
+        decode_times: true
