--- a/config/machines/ci/catalog.yaml
+++ b/config/machines/ci/catalog.yaml
@@ -23,6 +23,14 @@ sources:
 # available grids, not worth to become machine independent
 # extra is an extra special cdo command to be applied before generating the weights
 grids:
+  # IFS
+  tco79-testmask:
+    path:  
+      2d: $grids/IFS/tco79_grid.nc
+      2dm: $grids/IFS/tco79_grid_masked.nc
+    vert_coord: ["2d", "2dm"]
+    masked: 
+      vars: ["2t"] # for testing purposes
   # FESOM
   test-pi-2d:
     path: $grids/pi_griddes_nodes_IFS.nc
