--- a/config/machines/ci/catalog/IFS/test-tco79.yaml
+++ b/config/machines/ci/catalog/IFS/test-tco79.yaml
@@ -12,6 +12,16 @@ sources:
       - ./AQUA_tests/models/IFS/short/IFS2d.tco79.nc
     description: original 2d output
     driver: netcdf
+  short_masked:
+    metadata:
+      source_grid_name: tco79-testmask
+    args:
+      chunks:
+        time: 1
+      urlpath:
+      - ./AQUA_tests/models/IFS/short/IFS2d.tco79.nc
+    description: original 2d output
+    driver: netcdf
   long:
     metadata:
       source_grid_name: lon-lat
