--- a/diagnostics/tropical_cyclones/cli/config_tcs_cli.yaml
+++ b/diagnostics/tropical_cyclones/cli/config_tcs_cli.yaml
@@ -1,8 +1,8 @@
 # experiment
 dataset:
   model: "IFS"
-  exp: "tco2559-ng5-cycle3"
-  #exp: "tco1279-orca025-cycle3"
+  #exp: "tco2559-ng5-cycle3"
+  exp: "tco1279-orca025-cycle3"
   #exp: "control-1950-devcon"
   source2d: "2D_1h_native" #"2D_1h_native"
   source3d: "3D_1h_native" #"3D_1h_native"
@@ -15,7 +15,7 @@ paths:
 
 # log level
 setup:
-  loglevel: 'INFO'
+  loglevel: 'WARNING'
 
 # grid on which operate
 grids:
@@ -28,7 +28,7 @@ varlist: ['msl', '10u', '10v', 'tprate']
 # temporal definition (YYYY-MM-DD)
 time: 
   startdate: '2020-01-20'
-  enddate: '2025-01-01'
+  enddate: '2024-12-31'
   frequency: '6h'
 
 stream:
