--- a/config/machines/lumi/catalog/NEMO/fdb-tco79-eorca1.yaml
+++ b/config/machines/lumi/catalog/NEMO/fdb-tco79-eorca1.yaml
@@ -9,7 +9,7 @@
           stream: monr
           date: 19500101
           time: '0000'
-          param: 263501
+          param: avg_thetao
           levtype: o3d
           levelist: [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 
                     19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 
@@ -28,4 +28,5 @@
       driver: gsv
       metadata: 
         fdb_path: /scratch/project_465000454/bjimenez/gsv_interface/config.yaml
+        eccodes_path: /projappl/project_465000454/jvonhar/aqua/eccodes/eccodes-2.28.0/definitions
         source_grid_name: eORCA1-3d
