--- a/config/aqua-grids.yaml
+++ b/config/aqua-grids.yaml
@@ -143,8 +143,10 @@ grids:
     vert_coord: depth
 
   # NEMO
-  eORCA1-2d:
+  ORCA1-2d:
     path: $grids/NEMO/ORCA1_mesh_sfc_grid_T.nc
+  eORCA1-2d:
+    path: $grids/NEMO/eORCA1_mesh_sfc_grid_T.nc
     #space_coord: ["cell"]
     # path: /pfs/lustrep3/scratch/project_465000454/pool/data/IFS/inputs_de_48r1/nemo/V40/eORCA1_Z75/common/mesh_mask.nc
     # extra:
