--- a/config/machines/ci/catalog.yaml
+++ b/config/machines/ci/catalog.yaml
@@ -19,6 +19,11 @@ sources:
     driver: yaml_file_cat
     args:
         path: "{{CATALOG_DIR}}/catalog/ICON/main.yaml"
+  NEMO:
+    description: NEMO oceanic model
+    driver: yaml_file_cat
+    args:
+        path: "{{CATALOG_DIR}}/catalog/NEMO/main.yaml"
 
 # available grids, not worth to become machine independent
 # extra is an extra special cdo command to be applied before generating the weights
