--- a/config/machines/ci/catalog/NEMO/test-eORCA1.yaml
+++ b/config/machines/ci/catalog/NEMO/test-eORCA1.yaml
@@ -13,7 +13,7 @@ sources:
     driver: netcdf
   short-3d:
     metadata:
-      source_grid_name: eORCA1-3d
+      source_grid_name: test-eORCA1-3d
     args:
       urlpath:
       - ./AQUA_tests/models/NEMO/eORCA1/eORCA1_salinity_3D.nc
