revert tprate fix

--- a/config/fixes/IFS.yaml
+++ b/config/fixes/IFS.yaml
@@ -260,6 +260,11 @@ models:
                 vars:
                     tprate:
                         source: tprate
+            monthly-1deg-2d:
+                method: merge
+                vars:
+                    tprate:
+                        source: tprate
 
         control-1950-nemo-dev:
             hourly-1deg:
@@ -268,6 +273,11 @@ models:
                     tprate:
                         source: tprate
             hourly-native:
+                method: merge
+                vars:
+                    tprate:
+                        source: tprate
+            monthly-1deg-2d:
                 method: merge
                 vars:
                     tprate:
@@ -284,6 +294,11 @@ models:
                 vars:
                     tprate:
                         source: tprate
+            monthly-1deg-2d:
+                method: merge
+                vars:
+                    tprate:
+                        source: tprate
 
         historical-1990-nemo-dev:
             hourly-1deg:
@@ -292,6 +307,11 @@ models:
                     tprate:
                         source: tprate
             hourly-native:
+                method: merge
+                vars:
+                    tprate:
+                        source: tprate
+            monthly-1deg-2d:
                 method: merge
                 vars:
                     tprate:
