--- a/config/machines/lumi/catalog/NEMO/control-1990-nemo-dev.yaml
+++ b/config/machines/lumi/catalog/NEMO/control-1990-nemo-dev.yaml
@@ -18,13 +18,13 @@ sources:
       savefreq: H  # at what frequency are data saved
       timestep: H  # base timestep for step timestyle
       timestyle: step  # variable date or variable step
-    description: Hourly surface data for eORCA025
+    description: Hourly surface data for eORCA12
     driver: gsv
     metadata: 
       fdb_path: /pfs/lustrep3/scratch/project_465000454/iwagner/a0c7/config.yaml
       eccodes_path: /projappl/project_465000454/jvonhar/aqua/eccodes/eccodes-2.32.0/definitions
       variables: ['sst']
-      source_grid_name: lon-lat
+      source_grid_name: eORCA12-2d
   hourly-native-3d:
     args:
       request:
@@ -44,10 +44,10 @@ sources:
       savefreq: H  # at what frequency are data saved
       timestep: H  # base timestep for step timestyle
       timestyle: step  # variable date or variable step
-    description: Hourly 3d data for eORCA025
+    description: Hourly 3d data for eORCA12
     driver: gsv
     metadata: 
       fdb_path: /pfs/lustrep3/scratch/project_465000454/iwagner/a0c7/config.yaml
       eccodes_path: /projappl/project_465000454/jvonhar/aqua/eccodes/eccodes-2.32.0/definitions
       variables: ['avg_thetao']
-      source_grid_name: lon-lat
+      source_grid_name: eORCA12-3d-height
