--- a/config/machines/lumi/catalog/NEMO/fdb-tco79-eorca1.yaml
+++ b/config/machines/lumi/catalog/NEMO/fdb-tco79-eorca1.yaml
@@ -30,4 +30,4 @@
         fdb_path: /scratch/project_465000454/bjimenez/gsv_interface/config.yaml
         eccodes_path: /projappl/project_465000454/jvonhar/aqua/eccodes/eccodes-2.28.0/definitions
         variables: [263501, 263500]
-        source_grid_name: eORCA1-3d
+        source_grid_name: eORCA1-3d-level
