setting up catalog entry for a0ef

--- a/config/machines/lumi/catalog/IFS/main.yaml
+++ b/config/machines/lumi/catalog/IFS/main.yaml
@@ -5,7 +5,7 @@ sources:
     args:
       path: '{{CATALOG_DIR}}/tco79-eORCA1.yaml'
   fdb-tco399:  #  https://earth.bsc.es/gitlab/digital-twins/de_340/gsv_interface/-/wikis/Specifications-of-fdb-long
-    description: fdb-long data tco399 grid 
+    description: fdb-long data tco399 grid
     driver: yaml_file_cat
     args:
       path: '{{CATALOG_DIR}}/fdb-tco399.yaml'
@@ -29,3 +29,8 @@ sources:
     driver: yaml_file_cat
     args:
       path: '{{CATALOG_DIR}}/control-1990-nemo-dev.yaml'
+  coupled-spinup-1990-1991:
+    description: "FDB IFS/NEMO \t1990 - 1991 coupled spinup (2y)"
+    driver: yaml_file_cat
+    args:
+      path: '{{CATALOG_DIR}}/coupled-spinup-1990-1991.yaml'
