--- a/cli/fdb-catalague-generator/config.yaml
+++ b/cli/fdb-catalague-generator/config.yaml
@@ -1,11 +1,11 @@
 model: IFS
-exp: control-1950-devcon-TEST
+exp: coupled-spinup-1990-1991
 grid: tco1279
-description: 'FDB IFS/NEMO control run'
-expver: a06x
-date: 19500101
-data_start_date: '19500101'
-data_end_date: '19591231'
-fdb_path: /pfs/lustrep3/scratch/project_465000454/pool/data/EXPERIMENTS/fdb-config-CONTROL_1950_DEVCON.yaml
-eccodes_path: /projappl/project_465000454/jvonhar/aqua/eccodes/eccodes-2.30.0/definitions
+description: 'FDB IFS/NEMO 	1990 - 1991 coupled spinup (2y)'
+expver: a0ef
+date: 19900101
+data_start_date: '19900101'
+data_end_date: '19910501'
+fdb_path: /scratch/project_465000454/iwagner/a0ef/config.yaml
+eccodes_path: /project/project_465000454/models/ifs-nemo/DE_CY48R1.0_climateDT_develop/source/eccodes/definitions
 
