--- a/config/machines/lumi/catalog/NEMO/main.yaml
+++ b/config/machines/lumi/catalog/NEMO/main.yaml
@@ -9,3 +9,8 @@ sources:
     driver: yaml_file_cat
     args:
       path: '{{CATALOG_DIR}}/control-1990-nemo-dev.yaml'
+  coupled-spinup-1990-1991:
+    description: 1990-1991 coupled spinup (2y) with fractional sea ice coupling
+    driver: yaml_file_cat
+    args:
+      path: '{{CATALOG_DIR}}/coupled-spinup-1990-1991.yaml'
