--- a/config/machines/levante/catalog/PSC/main.yaml
+++ b/config/machines/levante/catalog/PSC/main.yaml
@@ -1,11 +1,11 @@
 sources:
   GIOMAS:
-    description: Polar Science Center sea ice volume (sivol) for the Southern Hemisphere 
+    description: Polar Science Center data for the Southern Hemisphere 
     driver: yaml_file_cat
     args:
       path: "{{CATALOG_DIR}}/giomas.yaml"
   PIOMAS:
-    description: Polar Science Center sea ice volume (sivol) for the Northern Hemisphere 
+    description: Polar Science Center data for the Northern Hemisphere 
     driver: yaml_file_cat
     args:
       path: "{{CATALOG_DIR}}/piomas.yaml"
