--- a/config/aqua-grids.yaml
+++ b/config/aqua-grids.yaml
@@ -210,14 +210,14 @@ grids:
     space_coord: ["lon", "lat"]
   
   psc-piomas:
-    space_coord: ["longitude", "latitude"]
+    space_coord: ["x", "y"]
     cellareas: $grids/PSC/grid_piomas.nc
     cellarea_var: areacello
     mask: $grids/PSC/grid_piomas.nc
     mask_var: sftof
 
   psc-giomas:
-    space_coord: ["longitude", "latitude"]
+    space_coord: ["x", "y"]
     cellareas: $grids/PSC/grid_giomas.nc
     cellarea_var: areacello
     mask: $grids/PSC/grid_giomas.nc
